one more time - fix deprecated toggle on mobile safari

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,7 +61,10 @@ body {
     }
 
     #toggle-deprecated {
-        background-color: #fff;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;    
+        background-color: transparent;
         font-size: inherit;
         line-height: inherit;
         font-family: inherit;
